A few warning fixes and fixed cards. Calling it a night, got a lot done for stretch goals!

--- a/frontend/what2watchfrontend/src/index.css
+++ b/frontend/what2watchfrontend/src/index.css
@@ -48,6 +48,9 @@ code {
   margin: 0 auto;
   width: 50vw;
 }
+#PageHeader {
+  text-align: center;
+}
 .library {
   text-align: center;
   margin: 0 auto;
